# QUEASARS

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  NOTICE.txt  README.md  pyproject.toml
.github/workflows/: queasars_ci.yml  queasars_deploy_documentation.yml  queasars_deploy_to_pypi.yml  queasars_deployment.yml
docs/source/: api_reference.rst  conf.py  index.rst  installation.rst  modules.rst  package_overview.rst  queasars.rst
examples/: README.md  evqe_jssp_optimization.ipynb  evqe_jssp_small_examples.ipynb  evqe_optimization.ipynb  requirements.txt  using_the_ibm_runtime.ipynb
experiment_scripts/: BenchmarkVisualizations.ipynb  Smac_Result_Visualization.ipynb  _setup_environment.sh  _start_python_job.sh  benchmark_result_serialization.py  benchmark_utility.py  evqe_benchmark.py  evqe_hyperparameter_configuration.py  evqe_noisy_benchmark.py  generate_jssp_instances.py  nine_operations_problem_instances.json  qaoa_benchmark.py  qaoa_hyperparameter_configuration.py  six_operations_problem_instances.json  start_python_script.sh  twelve_operations_problem_instances.json  visualize_problem_instances.ipynb  vqe_benchmark.py  vqe_hyperparameter_configuration.py  vqe_noisy_benchmark.py
experiment_scripts/smac_results/: evqe_smac_result_1405_1.json  evqe_smac_result_1705_1.json  qaoa_smac_result_1205_2.json  vqe_smac_result_1205_2.json
experiment_scripts/smac_runs/evqe_smac_run_1405_1/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
experiment_scripts/smac_runs/evqe_smac_run_1705_1/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
experiment_scripts/smac_runs/qaoa_smac_run_1205_2/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
experiment_scripts/smac_runs/vqe_smac_run_1205_2/0/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
queasars/: __init__.py
queasars/circuit_evaluation/: bitstring_evaluation.py  circuit_evaluation.py  configured_primitives.py  distributed_primitives.py  evaluation_execution.py  expectation_calculation.py  mutex_primitives.py  transpiling_primitives.py
queasars/job_shop_scheduling/: domain_wall_hamiltonian_encoder.py  hamiltonian_encoder.py  problem_instances.py  random_problem_instances.py  scip_solver.py  serialization.py  visualization.py
queasars/minimum_eigensolvers/: __init__.py
queasars/minimum_eigensolvers/base/: bitstring_evaluator.py  evolutionary_algorithm.py  evolving_ansatz_minimum_eigensolver.py  evolving_ansatz_minimum_eigensolver_result.py  serialization.py  termination_criteria.py
queasars/minimum_eigensolvers/evqe/: evqe.py  individual.py  serialization.py
queasars/minimum_eigensolvers/evqe/evolutionary_algorithm/: individual.py  mutation.py  population.py  selection.py  speciation.py
queasars/minimum_eigensolvers/evqe/quantum_circuit/: circuit_layer.py  quantum_gate.py  serialization.py
queasars/utility/: domain_wall_variables.py  pauli_strings.py  random.py  spsa_termination.py
test/: __init__.py  test_ci.py
test/job_shop_scheduling/: __init__.py  problem_instance.py  test_domain_wall_hamiltonian_encoder.py  test_problem_instances.py  test_serialization.py
test/minimum_eigensolvers/evqe/: model.py  solver.py  test_evqe_algorithm.py  test_evqe_individual.py  test_evqe_mutations.py  test_evqe_operators.py
