[tool.poetry]
name = "queasars"
version = "0.1.0"
description = "QUEASARS is a qiskit based python framework implementing quantum variational eigensolvers which use evolutionary algorithms to find a good ansatz during the optimization process."
authors = [
    "Sven Prüfer <sven.pruefer@dlr.de>",
    "Daniel Leidreiter <daniel.leidreiter@dlr.de>",
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "OSI Approved :: Apache Software License",
]
packages = ["queasars"]
include = [
    "LICENSE.txt",
    "NOTICE.txt",
    "CHANGELOG.md",
    "README.md",
]

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
qiskit = ">=0.44.0"
qiskit-algorithms = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.6.0"
mypy2junit = ">=1.9.0"
pytest = ">=7.4.0"
pylint = ">=3.0.2"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
