[tool.poetry]
name = "queasars"
version = "0.8"
description = "QUEASARS is an open-source, qiskit-based, python package implementing quantum variational eigensolvers which use evolutionary algorithms to find a good ansatz during the optimization process."
authors = [
    "Sven Prüfer <sven.pruefer@dlr.de>",
    "Daniel Leidreiter <daniel.leidreiter@dlr.de>",
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    {include = "queasars"}
]
include = [
    "LICENSE.txt",
    "NOTICE.txt",
    "CHANGELOG.md",
    "README.md",
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
qiskit = ">=0.44.0"
qiskit-algorithms = ">=0.2.0"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.6.0"
pytest = ">=7.4.0"
pylint = ">=3.0.2"
black = {version=">=23.10.1", extras=["d"]}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
