[tool.poetry]
name = "queasars"
version = "0.3.1"
description = "QUEASARS is an open-source, qiskit-based, python package implementing quantum variational eigensolvers which use evolutionary algorithms to find a good ansatz during the optimization process."
authors = [
    "Sven Prüfer <sven.pruefer@dlr.de>",
    "Daniel Leidreiter <daniel.leidreiter@dlr.de>",
]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
]
packages = [
    {include = "queasars"}
]
include = [
    "LICENSE.txt",
    "NOTICE.txt",
    "CHANGELOG.md",
    "README.md",
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"
qiskit = ">=1.0.0"
numpy = ">=1.26"
qiskit-algorithms = ">=0.2.0"
qiskit-ibm-runtime=">=0.19.0"
qiskit-optimization = ">= 0.6.0"
dask = ">=2023.12.0"
distributed = ">=2023.12.0"
typing-extensions = ">=4.9.0"
pyscipopt = {version = "4.*", optional = true}

[tool.poetry.extras]
pyscipopt = ["pyscipopt"]

[tool.poetry.group.dev.dependencies]
mypy = ">=1.6.0"
pytest = ">=7.4.0"
pylint = ">=3.0.2"
black = {version=">=23.10.1", extras=["d"]}
notebook = ">= 7.0.6"
matplotlib = ">= 3.8.2"
qiskit-aer=">=0.13.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    'pyscipopt',
    'pyscipopt.*',
    'qiskit.circuit',
    'qiskit.circuit.*',
    'qiskit.converters',
    'qiskit.converters.*',
    'qiskit.primitives',
    'qiskit.primitives.*',
    'qiskit.qpy',
    'qiskit.qpy.*',
    'qiskit.quantum_info',
    'qiskit.quantum_info.*',
    'qiskit.result',
    'qiskit.result.*',
    'qiskit.transpiler',
    'qiskit.transpiler.*',
    'qiskit_algorithms.algorithm_result',
    'qiskit_algorithms.algorithm_result.*',
    'qiskit_algorithms.list_or_dict',
    'qiskit_algorithms.list_or_dict.*',
    'qiskit_algorithms.minimum_eigensolvers',
    'qiskit_algorithms.minimum_eigensolvers.*',
    'qiskit_algorithms.optimizers',
    'qiskit_algorithms.optimizers.*',
    'qiskit_algorithms.utils',
    'qiskit_algorithms.utils.*',
]
ignore_missing_imports = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
